unpackaged/main/default/objects/project_cloud__Stakeholder_Activity__c/project_cloud__Stakeholder_Activity__c.object-meta.xml
<CustomObject>
    <label>Stakeholder Activity</label>
    <nameField>
        <label>Stakeholder Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stakeholder Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>