unpackaged/main/default/objects/project_cloud__Stakeholder_Activity__c/fields/project_cloud__IsGroup__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__IsGroup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsGroup</label>
    <type>Checkbox</type>
</CustomField>