unpackaged/main/default/objects/project_cloud__Stakeholder_Activity__c/fields/project_cloud__Parent_Group__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Parent_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to allow grouping of activities</description>
    <label>Group</label>
    <referenceTo>project_cloud__Stakeholder_Activity__c</referenceTo>
    <relationshipLabel>Stakeholder Activities</relationshipLabel>
    <relationshipName>Stakeholder_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>