unpackaged/main/default/objects/project_cloud__Stakeholder_Activity__c/fields/project_cloud__Project__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>project_cloud__Project__c</referenceTo>
    <relationshipLabel>Stakeholder Activities</relationshipLabel>
    <relationshipName>Stakeholder_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>